# EarthSciDiscretizations

./: .gitignore  AGENTS.md  CNAME  Project.toml  README.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
discretizations/: README.md  SELECTOR_KINDS.md
docs/: GRIDS_API.md  Project.toml  README.md  REPO_LAYOUT.md  hugo.toml  make.jl  rule-catalog.md
python/: README.md  pyproject.toml
python/src/earthsci_discretizations/: __init__.py
python/src/earthsci_discretizations/grids/: __init__.py  arakawa.py  cartesian.py  cubed_sphere.py  duo.py  lat_lon.py  mpas.py  vertical.py
python/src/earthsci_discretizations/rules/: __init__.py  cartesian.py  evaluator.py
python/src/earthsci_toolkit/: __init__.py
python/src/earthsci_toolkit/grids/: __init__.py  arakawa.py  cartesian.py  cubed_sphere.py  duo.py  lat_lon.py  mpas.py  vertical.py
python/src/earthsci_toolkit/rules/: __init__.py  loader.py  stencil.py
python/tests/: test_arakawa.py  test_arakawa_conformance.py  test_cartesian.py  test_cartesian_conformance.py  test_centered_2nd_uniform_latlon_rule.py  test_cubed_sphere.py  test_cubed_sphere_conformance.py  test_duo.py  test_duo_conformance.py  test_lat_lon.py  test_lat_lon_conformance.py  test_mpas.py  test_mpas_conformance.py  test_mpas_fixtures.py  test_ppm_reconstruction_rule.py  test_smoke.py  test_vertical.py  test_vertical_conformance.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  rule_eval.rs
rust/src/grids/: arakawa.rs  cartesian.rs  cubed_sphere.rs  duo.rs  lat_lon.rs  mod.rs  mpas.rs  vertical.rs
rust/src/rules/: mod.rs  ppm_reconstruction.rs
rust/tests/: arakawa.rs  arakawa_conformance.rs  cartesian.rs  cartesian_conformance.rs  cubed_sphere.rs  cubed_sphere_conformance.rs  duo.rs  duo_conformance.rs  lat_lon.rs  lat_lon_conformance.rs  lat_lon_rule_conformance.rs  mpas.rs  mpas_conformance.rs  ppm_reconstruction_rule_conformance.rs  smoke.rs  vertical_conformance.rs
scripts/: setup_polecat_env.sh
src/: EarthSciDiscretizations.jl  bc_handler.jl  discrete_space.jl  discretization.jl  equation_discretizer.jl  fv_stencil.jl  ghost_cells.jl  operator_registry.jl  rule_eval.jl  rules.jl  staggering.jl  system_assembly.jl
test/: test_arakawa.jl  test_arakawa_conformance.jl  test_arakawa_fixtures.jl  test_arakawa_trait.jl  test_arrayop.jl  test_cartesian_conformance.jl  test_cartesian_fixtures.jl  test_cartesian_grid.jl  test_cartesian_trait.jl  test_cubed_sphere_conformance.jl  test_cubed_sphere_fixtures.jl  test_cubed_sphere_trait.jl  test_divergence.jl  test_duo_grid.jl  (+36 more)
(+336 files in other folders)
