[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthsci-discretizations"
version = "0.1.0"
description = "Discretization runtime and grid accessors for the EarthSci model stack (Python binding)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EarthSci contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.24",
    "earthsci-toolkit @ git+https://github.com/EarthSciML/EarthSciSerialization.git@main#subdirectory=packages/earthsci_toolkit",
]

[project.optional-dependencies]
xarray = ["xarray>=2024.1", "pyproj>=3.6"]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/EarthSciML/EarthSciDiscretizations"

[tool.hatch.build.targets.wheel]
packages = ["src/earthsci_discretizations"]

[tool.hatch.build.targets.sdist]
include = ["src/earthsci_discretizations", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
