[package]
name = "earthsci_grids"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Grid accessor runtime for the EarthSci model stack (Rust binding)."
license = "MIT"
repository = "https://github.com/EarthSciML/EarthSciDiscretizations"
keywords = ["earth-science", "grids", "discretization", "scientific-computing"]
categories = ["science"]

[lib]
name = "earthsci_grids"
path = "src/lib.rs"

[features]
default = []
# Primary ecosystem integration (per docs/GRIDS_API.md §5.3). Opt-in so the
# default build has zero hard deps beyond the standard library + nalgebra.
geo = ["dep:geo"]
proj = ["dep:proj"]

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
geo = { version = "0.29", optional = true }
proj = { version = "0.27", optional = true }
# Unpublished sibling; check out EarthSciSerialization next to this repo.
# See README for the expected layout.
earthsci-toolkit = { path = "../../EarthSciSerialization/packages/earthsci-toolkit-rs" }

[dev-dependencies]
approx = "0.5"
